[package]
name = "is-mart-open-api"
version = "0.1.0"
authors = ["B4TT3RY <gb4tt3ry@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
regex = "1.5.4"
cfg-if = "1.0.0"
worker = "0.0.6"
serde = "1.0.130"
scraper = "0.12.0"
serde_json = "1.0.67"
urlencoding = "2.1.0"
chrono = { version = "0.4.19", features = ["wasmbind"] }
chrono-tz = "0.6.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
